Snapshot organisms and substances